--- a/index.html
+++ b/index.html
@@ -243,31 +243,17 @@
       background: #002c31;
       height: calc(100dvh - var(--demoTopbarH, 70px));
     }
-
-    /* ✅ CADRE IFRAME — ajout liseret bleu (ring) */
     .tour-frame-architectural {
       width: 100%;
       height: 100%;
       background: black;
       border: 8px solid #00565e;
       border-radius: 1.5rem;
-
-      /* Liseret bleu + léger accent teal (extérieur) */
-      box-shadow:
-        0 0 0 2px rgba(49, 90, 151, 0.95),   /* liseret bleu */
-        0 0 0 6px rgba(43, 167, 194, 0.16),  /* petit accent */
-        0 40px 100px -20px rgba(0, 0, 0, 0.8);
-
+      box-shadow: 0 40px 100px -20px rgba(0, 0, 0, 0.8);
       overflow: hidden;
       position: relative;
     }
-
-    /* Immersion : on enlève aussi le liseret */
-    .immersion-mode .tour-frame-architectural {
-      border: 0px solid transparent;
-      border-radius: 0;
-      box-shadow: none;
-    }
+    .immersion-mode .tour-frame-architectural { border: 0px solid transparent; border-radius: 0; }
     .immersion-mode .demo-topbar { height: 0; overflow: hidden; opacity: 0; }
     .immersion-mode .demo-frame-container { padding: 0; height: 100dvh; }
 
@@ -434,19 +420,9 @@
        ✅ FIX MOBILE — MODE DÉMOS (catégories + iframe)
        ========================================================= */
     @media (max-width: 640px) {
-      #page-demo .demo-topbar {
-        height: auto !important;
-        padding: 10px 12px !important;
-        align-items: flex-start !important;
-      }
-      #page-demo .demo-topbar > div:first-child {
-        flex-wrap: wrap !important;
-        gap: 10px !important;
-        overflow: visible !important;
-      }
-      #page-demo .demo-topbar > div:first-child .h-8.w-px {
-        display: none !important;
-      }
+      #page-demo .demo-topbar { height: auto !important; padding: 10px 12px !important; align-items: flex-start !important; }
+      #page-demo .demo-topbar > div:first-child { flex-wrap: wrap !important; gap: 10px !important; overflow: visible !important; }
+      #page-demo .demo-topbar > div:first-child .h-8.w-px { display: none !important; }
       #page-demo .demo-topbar > div:first-child nav {
         width: 100% !important;
         padding-top: 6px !important;
@@ -461,17 +437,8 @@
         border-radius: 14px !important;
       }
       #page-demo .demo-frame-container { padding: 0 !important; }
-      #page-demo .tour-frame-architectural {
-        border: 0 !important;
-        border-radius: 0 !important;
-        box-shadow: none !important; /* garde le plein écran clean sur mobile */
-      }
-      #demo-frame {
-        width: 100% !important;
-        height: 100% !important;
-        display: block !important;
-        background: #000 !important;
-      }
+      #page-demo .tour-frame-architectural { border: 0 !important; border-radius: 0 !important; box-shadow: none !important; }
+      #demo-frame { width: 100% !important; height: 100% !important; display: block !important; background: #000 !important; }
       #page-demo .exit-immersion {
         top: auto !important;
         bottom: calc(18px + env(safe-area-inset-bottom)) !important;
@@ -482,6 +449,39 @@
     @media (prefers-reduced-motion: reduce) {
       .cta-breathe, .animate-bounce-x-right { animation: none !important; }
     }
+
+    /* =========================================================
+       ✅ NEON + LISERET — MODAL "IMMERSION MAXIMALE"
+       ========================================================= */
+    #modal-content.modal-neon {
+      border: 3px solid rgba(49, 90, 151, 0.78); /* bleu #315a97 */
+      box-shadow:
+        0 0 0 6px rgba(49, 90, 151, 0.22),
+        0 0 26px rgba(49, 90, 151, 0.55),
+        0 0 70px rgba(39, 130, 153, 0.35),
+        0 30px 90px -25px rgba(0, 0, 0, 0.78);
+      animation: modalNeonPulse 2.6s ease-in-out infinite;
+    }
+
+    @keyframes modalNeonPulse {
+      0%, 100% {
+        box-shadow:
+          0 0 0 6px rgba(49, 90, 151, 0.18),
+          0 0 22px rgba(49, 90, 151, 0.45),
+          0 0 60px rgba(39, 130, 153, 0.28),
+          0 30px 90px -25px rgba(0, 0, 0, 0.78);
+      }
+      50% {
+        box-shadow:
+          0 0 0 8px rgba(49, 90, 151, 0.26),
+          0 0 36px rgba(49, 90, 151, 0.70),
+          0 0 92px rgba(39, 130, 153, 0.45),
+          0 30px 90px -25px rgba(0, 0, 0, 0.78);
+      }
+    }
+
+    html.reduced-motion #modal-content.modal-neon { animation: none !important; }
+    @media (prefers-reduced-motion: reduce) { #modal-content.modal-neon { animation: none !important; } }
   </style>
 </head>
 
@@ -689,7 +689,8 @@
       <!-- DEMO -->
       <section id="page-demo" class="page overflow-hidden">
         <div id="demo-modal" class="fixed inset-0 bg-black/95 z-[500] hidden items-center justify-center p-6 backdrop-blur-xl">
-          <div class="bg-white max-w-md w-full p-12 rounded-[3rem] text-center shadow-2xl scale-95 opacity-0 transition-all duration-700" id="modal-content">
+          <!-- ✅ modal-neon ajouté ici -->
+          <div class="bg-white max-w-md w-full p-12 rounded-[3rem] text-center shadow-2xl scale-95 opacity-0 transition-all duration-700 modal-neon" id="modal-content">
             <div class="text-6xl mb-8 text-[#00565e]">⛶</div>
             <h2 class="text-3xl font-serif italic text-[#00565e] mb-6">Immersion Maximale</h2>
             <p class="text-slate-500 mb-10 font-light text-sm leading-relaxed uppercase tracking-widest">Activez le mode plein écran pour une expérience optimale.</p>
